# raw2gray

./: .gitignore  CMakeLists.txt  LICENSE  README.md  raw2gray.cpp
